--- a/config/database.yml
+++ b/config/database.yml
@@ -13,12 +13,14 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  
 
 development:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: gym_development
 
 # Warning: The database defined as "test" will be erased and
@@ -26,6 +28,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: gym_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -49,6 +55,8 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
   database: gym_production
   username: gym
   password: <%= ENV['GYM_DATABASE_PASSWORD'] %>
